--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <p>Com uma abordagem focada em suas necessidades individuais, busco te ajudar a compreender e a lidar de forma mais eficaz com o que gera sofrimento, apoiando seu desenvolvimento pessoal e bem-estar emocional.</p>
             </div>
             <div class="section-sobre-image">
-                <img src="imagens/kassi-perfil.jpg.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img"> 
+                <img src="imagens/kassi-perfil.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img"> 
             </div>
         </div>
     </section>
@@ -385,7 +385,7 @@
                 <li><i class="fab fa-whatsapp"></i> WhatsApp: 82 9907-9493 </li>
                 <li><i class="fab fa-instagram"></i> Instagram: <a href="https://www.google.com" target="_blank">kassianelinspsi</a> </li>
             </ul>
-            <img src="imagens/qrcode.jpg.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
+            <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
         </div>
     </section>
 
