--- a/index.html
+++ b/index.html
@@ -323,21 +323,21 @@
         <img src="imagens/logo.png" alt="Logo Kassiane Lins Psicóloga" width="125" height="125" class="logo"> 
         <h1>Kassiane Lins dos Santos</h1>
         <p>Psicóloga Clínica - CRP 15/6551</p>
-        <a href="#contato" class="cta-button">Vamos Conversar</a>
+        <a href="https://wa.me/message/DN7GJ7W4BKA2E1" target="_blank" class="cta-button">Vamos Conversar</a>
     </div>
 
     <div class="slideshow-container">
         <div class="mySlides">
             <img src="https://picsum.photos/1200/450?random=1" alt="Imagem 1">
-            <div class="text">Empatia, acolhimento e cuidado para sua saúde mental</div>
+            <div class="text">Nenhum sofrimento é pequeno demais para não ser escutado.</div>
         </div>
         <div class="mySlides">
             <img src="https://picsum.photos/1200/450?random=2" alt="Imagem 2">
-            <div class="text">Atendimento individualizado para adultos</div>
+            <div class="text">Todo sujeito merece um espaço para dizer de si.</div>
         </div>
         <div class="mySlides">
             <img src="https://picsum.photos/1200/450?random=3" alt="Imagem 3">
-            <div class="text">Você não está sozinha(o) nessa caminhada</div>
+            <div class="text">Na fala, cada um pode encontrar novos caminhos para viver.</div>
         </div>
     </div>
 
@@ -398,7 +398,7 @@
     </section>
 
     <footer>
-        <p>"Cuidar da mente é um ato de coragem."</p>
+        <p>"Cuidar de si é acolher o que insiste em ser dito."</p>
     </footer>
 
     <script>
