--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         </div>
         <div class="mySlides">
             <img src="https://picsum.photos/1200/450?random=3" alt="Imagem 3">
-            <div class="text">Na fala, cada um pode encontrar novos caminhos para viver.</div>
+            <div class="text">“Na fala, cada um pode encontrar novos caminhos para viver.</div>
         </div>
     </div>
 
@@ -356,8 +356,9 @@
                 <p>Eu tenho 27 anos, sou de Maceió - Alagoas, formada em Psicologia pelo Centro Universitário de Maceió (2021), com capacitação em Saúde Mental pela FAVENI e atualmente pós-graduanda em Psicologia Clínica pela PUC-RS. </p>
                 <p>Amo estudar Psicanálise e ler, desde romances a poesias. Também amo ouvir jazz e o mar. Estar na natureza nos ajuda a nos conectar com nós mesmos, não é poético? </p>
                 <p>Já morei por um tempo na Argentina e trago comigo uma alma viajante, apaixonada por conhecer novas culturas e lugares. </p>
-                <p>Meus atendimentos acontecem apenas on-line para qualquer lugar do Brasil e do mundo. Ah, em português e en español. 🇧🇷🇪🇸</p>
-                <p>Vamos começar? Mas antes, leia um pouquinho sobre a minha abordagem, minha linha teórica e o meu trabalho clínico. ⤵️</p>
+                <p>Meus atendimentos acontecem apenas on-line para qualquer lugar do Brasil e do mundo. Ah, em português e <i>en español.</i> 🇧🇷🇪🇸</p>
+                <p>Vamos começar? </p>
+                <p>Mas antes, leia um pouquinho sobre a minha abordagem, minha linha teórica e o meu trabalho clínico. ⤵️</p>
             </div>
             <div class="section-sobre-image">
                 <img src="imagens/kassi-perfil.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img"> 
