--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             box-shadow: 0 6px 18px rgba(0,0,0,0.12);
             -webkit-backdrop-filter: blur(6px);
             backdrop-filter: blur(6px);
+            display: flex; /* ATENÇÃO: ALTERAÇÃO AQUI */
+            justify-content: center; /* ATENÇÃO: ALTERAÇÃO AQUI */
+            align-items: center; /* ATENÇÃO: ALTERAÇÃO AQUI */
         }
 
         .header .logo {
@@ -122,7 +125,7 @@
         }
 
         .header.sticky .logo, .header.sticky h1, .header.sticky .cta-button {
-            display: inline-block;
+            /* display: inline-block; - REMOVIDO */
             vertical-align: middle;
         }
 
