--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@
         <h2>Contato</h2>
         <div class="section-content-centered">
             <ul>
-                <li><i class="fas fa-envelope"></i> Email: kassianelinspsi@gmail.com </li>
+                <li><i class="fas fa-envelope"></i> Email:kassianelinspsi@gmail.com </li>
                 <li><i class="fab fa-whatsapp"></i> WhatsApp: 82 99907-9493 </li>
-                <li><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/kassianelinspsi/" target="_blank">kassianelinspsi</a> </li>
+                <li><i class="fab fa-instagram"></i> Instagram: <a> @kassianelinspsi</a> </li>
             </ul>
             <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
         </div>
