--- a/index.html
+++ b/index.html
@@ -439,12 +439,8 @@
                 margin-left: 8px;
                 flex-grow: 1; /* Novo: permite que o título ocupe o espaço restante */
             }
-            .header.sticky .logo {
-                width: 45px;
-                height: 45px;
-            }
             .header.sticky .cta-button {
-                margin-left: 0; /* Novo: remove o margin-left para o layout mobile */
+                margin-left: 0; /* Novo: remove a margem para o layout mobile */
             }
         }
         
@@ -531,7 +527,7 @@
                 <ul>
                     <li><i class="fas fa-envelope"></i> Email:kassianelinspsi@gmail.com </li>
                     <li><i class="fab fa-whatsapp"></i> WhatsApp: 82 99907-9493 </li>
-                    <li><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/kassianelinspsi/"> @kassianelinspsi</a> </li>
+                    <li><i class="fab fa-instagram"></i> Instagram: <a> @kassianelinspsi</a> </li>
                 </ul>
                 <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
             </div>
