--- a/index.html
+++ b/index.html
@@ -431,16 +431,25 @@
                 font-size: 20px;
             }
             .header.sticky {
-                justify-content: space-between; /* Novo: distribui o espaço */
-                gap: 8px; /* Novo: adiciona espaço entre os itens */
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: flex-start;
+                height: auto;
+                padding: 8px 15px;
+            }
+            .header.sticky .logo {
+                display: none;
             }
             .header.sticky h1 {
                 font-size: 18px;
-                margin-left: 8px;
-                flex-grow: 1; /* Novo: permite que o título ocupe o espaço restante */
+                margin: 0;
+                text-align: left;
             }
             .header.sticky .cta-button {
-                margin-left: 0; /* Novo: remove a margem para o layout mobile */
+                margin-left: auto;
+                padding: 6px 10px;
+                font-size: 14px;
             }
         }
         
@@ -458,7 +467,7 @@
         <img src="imagens/logo.png" alt="Logo Kassiane Lins Psicóloga" width="100" height="100" class="logo">
         <h1>Kassiane Lins dos Santos</h1>
         <p>Psicóloga Clínica - CRP 15/6551</p>
-        <a href="https://wa.me/message/DN7GJ7W4BKA2E1" target="_blank" class="cta-button">Vamos Conversar  </a>
+        <a href="https://wa.me/message/DN7GJ7W4BKA2E1" target="_blank" class="cta-button">Vamos Conversar</a>
     </div>
 
     <main>
@@ -527,7 +536,7 @@
                 <ul>
                     <li><i class="fas fa-envelope"></i> Email:kassianelinspsi@gmail.com </li>
                     <li><i class="fab fa-whatsapp"></i> WhatsApp: 82 99907-9493 </li>
-                    <li><i class="fab fa-instagram"></i> Instagram: <a> @kassianelinspsi</a> </li>
+                    <li><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/kassianelinspsi/"> @kassianelinspsi</a> </li>
                 </ul>
                 <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
             </div>
